sexto commit hacer responsiva la pàgina

--- a/index.html
+++ b/index.html
@@ -34,16 +34,21 @@
             <div class="texto-encriptado">
                 <p class="tex"> </p>
             </div>
-            <img class="muñeco" src="imagenes/Muñeco1.png" alt="figura de un adolescente">
+            <div class="muñeco">
+                <!--<img class="muñeco" src="imagenes/Muñeco1.png" alt="figura de un adolescente">-->
+            </div>
 
-            <!-- En caso de un mensaje en blanco doy el aviso-->
-            <img id="verMensaje" class="sinMensaje" src="imagenes/Frame 5a.png" alt="no hay mensajes">
+            <div id="verMensaje">
+                <!-- En caso de un mensaje en blanco doy el aviso-->
+                <!--<img id="verMensaje" class="sinMensaje" src="imagenes/Frame 5a.png" alt="no hay mensajes">-->
+            </div>
+
             <div class="copiar">
                 <button type="button">Copiar</button>
             </div>
         </div>
     </aside>
-    
+
     <!-- Secuencia lógica-->
     <script type="text/javascript" LANGUAGE="JavaScript" src="app.js"></script>
 </body>
