commit final del proyecto

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <header id="encabezado">
         <img src="imagenes/Logo.png" alt="logo alura">
+        <h1 class="titulo">ENCRIPTADOR DE TEXTO</h1>
+        <h3 class="nombreprogramador">By Sergio De Federico</h3>
     </header>
     <section id="operativo">
 
@@ -31,6 +33,7 @@
     <!-- Desarrollo de la ventana lateral para la indicación del mensaje encriptado y permitir su copia-->
     <aside id="ventana-lateral">
         <div class="figura">
+            <h2>Texto Traducido</h2>
             <div class="texto-encriptado">
                 <p class="tex"> </p>
             </div>
@@ -48,7 +51,7 @@
             </div>
         </div>
     </aside>
-
+    
     <!-- Secuencia lógica-->
     <script type="text/javascript" LANGUAGE="JavaScript" src="app.js"></script>
 </body>
