--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <img src="imagenes/Logo.png" alt="logo alura">
         <h1 class="titulo">ENCRIPTADOR DE TEXTO</h1>
         <h3 class="nombreprogramador">By Sergio De Federico</h3>
+        <p>
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="¡CSS Válido!" />
+            </a>
+        </p>
     </header>
     <section id="operativo">
         <!--ingreso el texto a codificar/Decodificar-->
