commit7 depurar pagina cargada segun W3C

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </a>
         </p>
     </header>
-    <section id="operativo">
-        <!--ingreso el texto a codificar/Decodificar-->
-        <div class="texto-analizar ">
+    <div id="operativo">
+         <!--ingreso el texto a codificar/Decodificar-->
+         <div class="texto-analizar ">
             <label for="texenc">Ingrese el texto</label>
             <input type="text" id="texenc">
         </div>
@@ -32,7 +32,7 @@
             <button class="operacionEncriptar" type="button"></button>
             <button class="operacionDesencriptar" type="button"></button>
         </div>
-    </section>
+    </div>
     <!-- Desarrollo de la ventana lateral para la indicación del mensaje encriptado y permitir su copia-->
     <aside id="ventana-lateral">
         <div class="figura">
@@ -53,7 +53,7 @@
         </div>
     </aside>
     <!-- Secuencia lógica-->
-    <script type="text/javascript" LANGUAGE="JavaScript" src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
